# pytest-libiio

./: .coveragerc  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README.rst  hardware_map.yml  mkdocs.yml  noxfile.py  pyproject.toml  pytest_pytest_libiio.py  requirements_dev.txt  requirements_doc.txt  setup.cfg  setup.py  tox.ini
.github/scripts/: install_libiio.sh
.github/workflows/: doc.yml  test.yml
docs/: cli.md  cli_tools.md  conf.py  emulation.md  fixtures.md  index.md  logo-design-notes.md  parse_context_files.py
docs/_static/: custom.css
docs/_templates/: iio_device.tmpl  iio_examples.tmpl  mkdocs.tmpl
docs/development/: index.md  index.rst  logo.md  logo.rst
docs/devices/: index.md
docs/js/: extra.js
main/: cli.html  emulation.html  fixtures.html  genindex.html  objects.inv  searchindex.js
main/.doctrees/: cli.doctree  cli_tools.doctree  emulation.doctree  environment.pickle  fixtures.doctree  index.doctree
main/_sources/: cli.md.txt  fixtures.md.txt
main/devices/: ad4020_ad4020.html  ad9081_ams.html  ad9081_axi-ad9081-tx-hpc.html  ad9081_hmc7044.html  ad9081_iio-gen-mux.html  ad9081_iio_sysfs_trigger.html  ad9081_tdd_ams.html  ad9081_tdd_axi-ad9081-rx-hpc.html  ad9081_tdd_axi-core-tdd.html  ad9265_axi-ad9265-core-lpc.html  ad9265_iio_sysfs_trigger.html  ad9265_xadc.html  adrv9002_ams.html  adrv9002_axi-adrv9002-tx-lpc.html  adrv9361_ad9517-3.html  adrv9361_xadc.html  adrv9364_ad7291-bob.html  adrv9364_ad7291.html  adrv9364_cf-ad9361-lpc.html  adrv9364_iio_sysfs_trigger.html  adrv9364_xadc.html  adrv9371_ad9371-phy.html  adrv9371_ad9528-1.html  adrv9371_ams.html  adrv9371_axi-ad9371-tx-hpc.html  adrv9375_ad7291.html  adrv9375_axi-ad9371-rx-hpc.html  adrv9375_axi-ad9371-rx-obs-hpc.html  adrv9375_axi-ad9371-tx-hpc.html  adxl355_adxl355.html  adxl355_iio_sysfs_trigger.html  cn0511_ad5693r-dev2.html  cn0511_ad9166-amp.html  cn0511_ad9166.html  cn0540_ad7768-1.html  cn0540_iio_sysfs_trigger.html  cn0540_ltc2308.html  cn0540_ltc2606.html  cn0540_one-bit-adc-dac.html  daq2_ad7291.html  (+25 more)
master/: .buildinfo  404.html  cli.html  cli_tools.html  emulation.html  fixtures.html  genindex.html  index.html  parse_context_files.py  search.html  searchindex.js  sitemap.xml
master/.doctrees/: cli_tools.doctree  environment.pickle  fixtures.doctree  index.doctree
master/_sources/: cli.md.txt  emulation.md.txt
master/_templates/: iio_device.tmpl  mkdocs.tmpl
master/cli/: index.html
master/cli_tools/: index.html
master/css/: extra.css
master/devices/: ad4020_ad4020.html  ad4020_iio_sysfs_trigger.html  ad4020_xadc.html  ad9081_ams.html  ad9081_axi-ad9081-rx-hpc.html  ad9081_axi-ad9081-tx-hpc.html  ad9081_hmc7044.html  ad9081_iio-gen-mux.html  ad9081_iio_sysfs_trigger.html  ad9081_tdd_ams.html  ad9081_tdd_axi-ad9081-rx-hpc.html  ad9081_tdd_axi-ad9081-tx-hpc.html  ad9081_tdd_axi-core-tdd.html  ad9081_tdd_hmc7044.html  ad9081_tdd_iio_sysfs_trigger.html  ad9172_ams.html  ad9172_axi-ad9172-hpc.html  ad9172_hmc7044.html  ad9172_iio_sysfs_trigger.html  ad9265_ad9517-4.html  ad9265_axi-ad9265-core-lpc.html  ad9265_iio_sysfs_trigger.html  ad9265_xadc.html  ad9434_ad9517-4.html  ad9434_axi-ad9434-core-lpc.html  ad9434_iio_sysfs_trigger.html  ad9434_xadc.html  adrv9002_adrv9002-phy.html  adrv9002_ams.html  adrv9002_axi-adrv9002-core-tdd-lpc.html  adrv9002_axi-adrv9002-rx-lpc.html  adrv9002_axi-adrv9002-tx-lpc.html  adrv9002_iio_sysfs_trigger.html  adrv9361_ad7291.html  adrv9361_ad9361-phy.html  adrv9361_ad9517-3.html  adrv9361_cf-ad9361-dds-core-lpc.html  adrv9361_cf-ad9361-lpc.html  adrv9361_iio_sysfs_trigger.html  adrv9361_xadc.html  (+97 more)
master/emulation/: index.html
master/fixtures/: index.html
pytest_libiio/: __init__.py  coverage.py  meta.py  mkpatch.py  plugin.py  tools.py
telm_data/: test_sth.pkl
tests/: conftest.py  test_coverage.py  test_coverage_unit.py  test_meta_unit.py  test_mkpatch.py  test_mkpatch_unit.py  test_plugin.py  test_plugin_unit.py  test_pytest_libiio.py  test_tools.py  test_tools_cli.py  test_xdist_port_stress.py  test_xdist_support.py
(+435 files in other folders)
