[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "pytest-libiio"
dynamic = ["version"]
description = "A pytest plugin for testing libiio based devices"
readme = "README.rst"
keywords = ["pytest", "libiio", "adi", "testing"]
license = { text = "BSD-3-Clause" }
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
authors = [{ name = "Travis Collins", email = "travis.collins@analog.com" }]
maintainers = [{ name = "Travis Collins", email = "travis.collins@analog.com" }]
dependencies = [
    "pytest>=3.5.0",
    "pylibiio>=0.23.1",
    "pyyaml",
    "lxml",
    "click",
    "pytest-xdist",
]

[project.optional-dependencies]
ssh = ["paramiko"]

[project.urls]
homepage = "https://tfcollins.github.io/pytest-libiio/"
documentation = "https://tfcollins.github.io/pytest-libiio/"
repository = "https://github.com/tfcollins/pytest-libiio"

[project.entry-points.pytest11]
libiio = "pytest_libiio.plugin"

[project.scripts]
gen_xml = "pytest_libiio.tools:gen_xml"

[tool.hatch.version]
path = "pytest_libiio/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["pytest_libiio"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-vs"
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "B"]
ignore = ["E203", "E266", "E501", "F401", "F403"]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F403"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/pytest_libiio/__init__.py",
]
